# WASM-CHIP8Emulator

./: Cargo.toml  README.md  index.html
src/: lib.rs  utils.rs
static/: index.css  index.html  index.js
static/pkg/: chip8_emu.js  chip8_emu_bg.wasm
static/roms/: roms.json
