[package]
name = "chip8_emu"
version = "0.1.0"
authors = ["Gal Horowitz <galush.horowitz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

wasm-bindgen = "0.2.69"

console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.46"
features = [
	"console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[profile.release]
lto = true
opt-level = "s"
